# cw20-vault

./: Cargo.toml  README.md  sourceme.sh
.cargo/: config
examples/: schema.rs
src/: contract.rs  msg.rs  state.rs
